Update Windows 11 File ExplorerStyler.yaml

--- a/Config/Windows 11 File ExplorerStyler.yaml
+++ b/Config/Windows 11 File ExplorerStyler.yaml
@@ -1,11 +1,16 @@
 theme: NoCommandBar
+backgroundTranslucentEffect: ''
+backgroundTranslucentEffectRegion: ''
 controlStyles:
   - target: ''
     styles:
       - ''
 styleConstants:
   - ''
+themeResourceVariables:
+  - ''
+explorerFrameContainerHeight: 0
+xamlDiagnosticsHandling: alert
 resourceVariables:
   - variableKey: ''
     value: ''
-explorerFrameContainerHeight: 0
